<resources>
    <string name="app_name" translatable="false">rHang fHiNdeL</string>
    <string name="app_description">SLC\'s Rang Finder Application</string>
    <string name="username_placeholder" translatable="false">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="button_login">Login</string>
    <string name="welcome_message">Welcome back, %s</string>
    <string name="available_rang">Available Rang</string>
    <string name="room_transactions">Room Transactions</string>
    <string name="schedule">Schedule</string>
    <string name="setup_biometrics_login">Setup Biometrics Login</string>
    <string name="log_out">Log Out</string>
    <string name="notification_channel_id" translatable="false">rhangfhindel_notification_channel</string>
    <string name="notification_channel_name">Rang Notification</string>
    <string name="login_with_another_account">Login with another account</string>
    <string name="credentials_invalid">Invalid credentials!</string>
    <string name="login_success">Login success!</string>
    <string name="all_field_required">All fields are required!</string>
    <string name="initial_format">Invalid initial format!</string>
    <string name="biometrics_setup_success">Biometric setup success!</string>
    <string name="biometrics_not_setup">Biometric login is not enabled!</string>
    <string name="greetings">Hello,</string>
    <string name="query_hint">Search rooms..</string>
    <string name="filter">Filter by floors</string>
    <string name="_6th_floor">6th floor</string>
    <string name="_7th_floor">7th floor</string>
    <string name="apply_filter">Apply filter</string>
    <string name="booking_confirmation">Do you want to book Room %s?</string>
    <string name="register_biometric">Register Biometric</string>
    <string name="register_biometric_description">Please use your biometric credentials to continue</string>
    <string name="cancel">Cancel</string>
    <string name="login_with_biometric">Login with Biometric</string>
    <string name="view_all_available_rangs">View all available rangs</string>
    <string name="view_all_booked_rangs">View all booked rangs</string>
    <string name="booked_rang" translatable="false">Booked Rangs</string>
    <string name="no_rooms">No rooms found.</string>
</resources>