<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="edu.bluejack23_2.rhangfhindel.viewmodels.LoginViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.LoggedInFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{@string/welcome_message(viewmodel.assistantUsername)}"
                android:textFontWeight="700"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/password_placeholder"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:text="@={viewmodel.password}"
                android:textFontWeight="700" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/button_login"
                    android:textAllCaps="false"
                    android:textColor="@color/accent"
                    android:textFontWeight="700"
                    android:textSize="14sp"
                    app:backgroundTint="@color/accent_background" />

                <ImageButton
                    android:id="@+id/login_biometrics_button"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:background="@drawable/baseline_fingerprint_24"
                    android:shadowColor="@color/accent_background"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_another_account_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_with_another_account"
                android:textAllCaps="false"
                android:textColor="@color/primary_color"
                android:textFontWeight="700"
                android:textSize="14sp"
                app:backgroundTint="@color/secondary_button" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:visibility="invisible" />

    </FrameLayout>

</layout>